alterando exemplo da documentação
