# priv/static/swagger.json
@@ -52,9 +52,9 @@
       "description": "A user of the application",
       "example": {
         "created_at": "2021-08-01T12:00:00Z",
-        "email": "alice@mail.com",
+        "email": "johndoe@mail.com",
         "id": "0bf45eb1-e00c-41d6-8fa3-0bcf85802823",
-        "name": "Alice",
+        "name": "John Doe",
         "updated_at": "2021-08-01T12:00:00Z"
       },
       "properties": {
@@ -122,6 +122,11 @@
     },
     "UserParams": {
       "description": "Parameters for creating a user",
+      "example": {
+        "email": "johndoe@mail.com",
+        "name": "John Doe",
+        "password": "password"
+      },
       "properties": {
         "email": {
           "description": "User email address",
